# ESP-Nodes

./: ..gitignore.swp  .gitignore  Code-Snips.md  ESP-Nodes  README.md  Tutorial-Rainmaker.md  _config.yml  about.md  code-snips.md  coder.json  index.html  index.md  machineid  package-lock.json  package.json  rainmaker.md  rc_code.md
ESP-IDF_GPS/: CMakeLists.txt
ESP-IDF_MQQTS_v5-4/: CMakeLists.txt  sdkconfig
ESP-IDF_NovaGlide/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  (+7 more)
ESP-IDF_NovaGlide/main/: .CMakeLists.txt.swp  .ESP-IDF_NovaGlide.c.swp  .scheduler.c.swp  .system_init.h.swp  CMakeLists.txt  ESP-IDF_NovaGlide copy.c  ESP-IDF_NovaGlide.c  ESP-IDF_NovaGlide.c copy.orig  I2C_Sonic-sensor-scan.c.bak  control_task.c  control_task.h  dashboard.c  dashboard.h  idf_component.yml  scheduler.c  scheduler.h  system_init.c  system_init.h
ESP-IDF_NovaGlide/subsystems/sensors/: .CMakeLists.txt.swp  .temp_sensor.c.swp  .temp_sensor.h.swp  CMakeLists.txt  ina219_sensor.bak  ina219_sensor.c  ina219_sensor.h  temp_sensor.c  temp_sensor.h  ultrasonic_hal.c  ultrasonic_hal.h  ultrasonic_hal.h.bak  ultrasonic_sensor.c  ultrasonic_sensor.c.bak  ultrasonic_sensor.c.bak2  ultrasonic_sensor.c.v1  ultrasonic_sensor.h
ESP32-IDF_Audio-mp3/: CMakeLists.txt  sdkconfig  sdkconfig bak  sdkconfig.old
ESP32-IDF_Audio-mp3/.cache/clangd/index/: ESP32-IDF_Audio-mp3.c.E61EEC8B796CBB0D.idx  ESP32-IDF_Audio-mp3.c.ED2450FC33FD4C77.idx  minimp3.h.F0A4AC6929A7A3D6.idx  minimp3_ex.h.68F603202F8F8676.idx
ESP32-IDF_Audio-mp3/main/: CMakeLists.txt  ESP32-IDF_Audio-mp3.bak2  ESP32-IDF_Audio-mp3.c
(+582 files in other folders)
